--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
 <title>TATA</title>
 
 <hr/>
-<h1 <u> <i>.List in HTML </i> </u> </h1>
+<h1 <u> <i>List in HTML </i> </u> </h1>
 <hr/>
 </head>
 <style>
@@ -19,9 +19,9 @@
 
 <ol style = "colour:purple;list-style:none;padding:0px;">
 
-<li>India</li>
+<li>Idia</li>
 <li>Usa</li>
-<li>Uk</li>
+<li>Ukrain</li>
 <li>Australia</li>
 </ol>
 
