--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ Profile</div></p>
 </div>
 </div>
 
-<div style="text-align:centre;margine-top:20px;font-size : 30px;background:gray">
+<div style="text-align:centre;margine-top:20px;font-size : 30px;background:">
 
 <a href="first.html"> Tesla  </a>
 <a href="photo gallery.html"> Photo Gallery </a>
-<a href="second.html"> list </a>
+<a href="List.html"> List </a>
 
 </div>
 
