--- a/photoshow.html
+++ b/photoshow.html
@@ -43,42 +43,42 @@ box-shadow:5px 5px 5px magenta;
 <body bgColor="blue">
 
 <a href="p1.html">
-<img src="C:\images/p1.jpeg">
+<img src="C:\images/p1.jpg">
 </a>
 
 <a href="p2.html">
-<img src="C:\images/p2.jpeg">
+<img src="C:\images/p2.jpg">
 </a>
 
 
 <a href="p3.html">
-<img src="C:\images/p3.jpeg">
+<img src="C:\images/p3.jpg">
 </a>
 
 
 <a href="p4.html">
-<img src="C:\images/p4.jpeg">
+<img src="C:\images/p4.jpg">
 </a>
 
 
 
 <a href="p5.html">
-<img src="C:\images/p5.jpeg">
+<img src="C:\images/p5.jpg">
 </a>
 
 
 <a href="p6.html">
-<img src="C:\images/p6.jpeg">
+<img src="C:\images/p6.jpg">
 </a>
 
 
 <a href="p7.html">
-<img src="C:\images/p7.jpeg">
+<img src="C:\images/p7.jpg">
 </a>
 
 
 <a href="p8.html">
-<img src="C:\images/p8.jpeg">
+<img src="C:\images/p8.jpg">
 </a>
 
 
