--- a/List.html
+++ b/List.html
@@ -5,6 +5,7 @@
 
 <title>list.html</title>
 
+<div style="background:gray;">
 <hr/>
 <h1 <u> <i>.List in HTML </i> </u> </h1>
 <hr/>
@@ -42,6 +43,91 @@
 <li><u>Australia</u></li>
 </ol>
 
+<ul>
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ul>
+
+<ol start = "100">
+<li> India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ol>
+
+<ol type="A">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ol>
+
+<ol type="a">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ol>
+
+<ol type="I">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ol>
+
+<ol type="i">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ol>
+
+<ul type="circle">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ul>
+
+<ul type="square">
+<li>India</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ul>
 
 
+<ul>
+<li>India
 
+           <ol type="A">
+                     <li>North
+                          <ul>
+                               <li>Delhi
+                                      <ol>
+                                           <li>North Delhi </li>
+                                           <li>South Delhi </li>
+                                           <li>West Delhi </li>
+                                           <li>East Delhi </li>
+                                        </ol>
+
+
+                                   <li>Up </li>
+                                   <li>Punjab </li>
+                                  </ul>
+                                </li>
+                               <li>South</li>
+                               <li>West</li>
+                               <li>East</li>
+                            </ol>
+
+</li>
+<li>Usa</li>
+<li>Uk</li>
+<li>Australia</li>
+</ul>
+
+</div>
