--- a/first.html
+++ b/first.html
@@ -20,7 +20,7 @@ Photo Gallery &nbsp &nbsp &nbsp &nbsp Contact </h2>
 
 <body>
 
-<img src="C:\images/tesla.png" width="300" height="300" alt="Tesla" title="Tesla" />
+<img src="C:\Users\91991\Desktop\html\images.png" width="300" height="300" alt="Tesla" title="Tesla" />
 
 <h3> About us </h3>
 
