--- a/photo gallery.html
+++ b/photo gallery.html
@@ -43,47 +43,47 @@ box-shadow:5px 5px 5px magenta;
 <body bgColor="blue">
 
 <a href="p1.html">
-<img src="C:\Users\91991\Desktop\html\images/p1.jpeg">
+<img src="C:\images/p1.jpg">
 </a>
 
 <a href="p2.html">
-<img src="C:\Users\91991\Desktop\html\images/p2.jpeg">
+<img src="C:\images/p2.jpg">
 </a>
 
 
 <a href="p3.html">
-<img src="C:\Users\91991\Desktop\html\images/p3.jpeg">
+<img src="C:\images/p3.jpg">
 </a>
 
 
 <a href="p4.html">
-<img src="C:\Users\91991\Desktop\html\images\p4.jpeg">
+<img src="C:\images\p4.jpg">
 </a>
 
 
 
 <a href="p5.html">
-<img src="C:\Users\91991\Desktop\html\images/p5.jpeg">
+<img src="C:\images/p5.jpg">
 </a>
 
 
 <a href="p6.html">
-<img src="C:\Users\91991\Desktop\html\images/p6.jpeg">
+<img src="C:\images/p6.jpg">
 </a>
 
 
 <a href="p7.html">
-<img src="C:\Users\91991\Desktop\html\images/p7.jpeg">
+<img src="C:\images/p7.jpg">
 </a>
 
 
 <a href="p8.html">
-<img src="C:\Users\91991\Desktop\html\images/p8.jpeg">
+<img src="C:\images/p8.jpg">
 </a>
 
 
 <a href="p9.html">
-<img src="C:\Users\91991\Desktop\html\images/p9.jpeg">
+<img src="C:\images/p9.jpeg">
 </a>
 
 </body>
