--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-size:30px;padding:2px;2px;
 text-align:centre;margine-top:15px;
 colour:teal; background: purple;">
 <div style="background:ed;text-align:centre";>
-<img src= "C:\images/p18.jpg" style="width:10%;">
+<img src= "\images/p18.jpg" style="width:10%;">
 <span style="margine -left:400px;width:700px;text-align:centre;background:Yellow;">
 
 KRISHNA </span>
@@ -30,9 +30,11 @@ Profile</div></p>
 
 <div style="text-align:centre;margine-top:20px;font-size : 30px;background:">
 
-<a href="first.html"> Tesla  </a>
-<a href="photo gallery.html"> Photo Gallery </a>
-<a href="List.html"> List </a>
+<a href="tesla.html"> Tesla UI  </a> &nbsp;&nbsp;
+<a href="photo gallery.html"> Photo Gallery </a> &nbsp;&nbsp;
+<a href="List.html"> List </a> &nbsp;&nbsp;
+<a href="ani.html"> Animation </a> &nbsp; &nbsp;
+<a href="ani2.html"> Animation2 </a>
 
 </div>
 
@@ -43,7 +45,7 @@ Profile</div></p>
 </div>
 <div style=word-spacing:10px;text-indent:150px; font-size:90px; font-family:verdana;borderpadding:100px; colour:dark gray">
 
-<h2> Hi I Am Krishna <h2>
+<h2> Hi I Am Krishna And I'm A Creative Person Driven By My Passion For Design. <h2>
 </div>
 
 </body>
