--- a/photo gallery.html
+++ b/photo gallery.html
@@ -43,7 +43,7 @@ box-shadow:5px 5px 5px magenta;
 <body bgColor="blue">
 
 <a href="p1.html">
-<img src="C:\images/p1.jpg">
+<img src="\images/p1.jpg">
 </a>
 
 <a href="p2.html">
@@ -52,18 +52,18 @@ box-shadow:5px 5px 5px magenta;
 
 
 <a href="p3.html">
-<img src="C:\images/p3.jpg">
+<img src="\images/p3.jpg">
 </a>
 
 
 <a href="p4.html">
-<img src="C:\images\p4.jpg">
+<img src="\images\p4.jpg">
 </a>
 
 
 
 <a href="p5.html">
-<img src="C:\images/p5.jpg">
+<img src="\images/p5.jpg">
 </a>
 
 
