--- a/index.html
+++ b/index.html
@@ -1,54 +1,26 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>My Profile</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ask her out</title>
+    <link rel="stylesheet" href="./style.css"
 </head>
-
-<style>
-
-</style>
-
 <body>
+    <div class="container">
+        <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <h1> Krishna ki valentine bnogi cutie❤️</h1>
+        <p>Will you go out with me</p>
 
-<div style="box-shadow:10px 10px 10px gray ;
-font-family:Arial black;
-font-size:30px;padding:2px;2px;
-text-align:centre;margine-top:15px;
-colour:teal; background: purple;">
-<div style="background:ed;text-align:centre";>
-<img src= "\images/p18.jpg" style="width:10%;">
-<span style="margine -left:400px;width:700px;text-align:centre;background:Yellow;">
+        <div class="btn">
+            <a href="yes.html">Yes</a>
+            <a href="no1.html">No</a>
+        </div>
 
-KRISHNA </span>
 
-<div style="text-align:centre;font-family:arial;font-size:30px;colour:black">
-Profile</div></p>
+        
 
-</div>
-</div>
-
-<div style="text-align:centre;margine-top:20px;font-size : 30px;background:">
-
-<a href="tesla.html"> Tesla UI  </a> &nbsp;&nbsp;
-<a href="photo gallery.html"> Photo Gallery </a> &nbsp;&nbsp;
-<a href="List.html"> List </a> &nbsp;&nbsp;
-<a href="ani.html"> Animation </a> &nbsp; &nbsp;
-<a href="ani2.html"> Animation2 </a>
-
-</div>
-
-<div style= font-size:30px;>
-
-<h4> About me </h4>
-
-</div>
-<div style=word-spacing:10px;text-indent:150px; font-size:90px; font-family:verdana;borderpadding:100px; colour:dark gray">
-
-<h2> Hi I Am Krishna And I'm A Creative Person Driven By My Passion For Design. <h2>
-</div>
-
+    </div>
 </body>
 
 </html>
-
